# codice_appalti

./: appalti.txt  appalti_allegati.txt  codice_appalti.csv  codice_appalti.json  codice_appalti.xlsx  extract_articles.py  extract_to_text.py  pyproject.toml  readme.md
codiceapp/: articles_to_html.py  extract_articles.py  extract_to_text.py  main.py
test/: test_extract_articles.py
