[tool.poetry]
name = "codice-appalti"
version = "0.1.0"
description = ""
authors = ["Marco Scarselli <scarselli@gmail.com>"]
readme = "README.md"
packages = [{include = "codice_appalti"}]

[tool.poetry.dependencies]
python = "^3.10"
pypdf2 = "^3.0.1"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
