[tool.poetry]
name = "codiceapp"
version = "0.1.0"
description = ""
authors = ["Marco Scarselli <scarselli@gmail.com>"]
readme = "README.md"
packages = [{include = "codiceapp"}]

[tool.poetry.dependencies]
python = "^3.10"
pypdf2 = "^3.0.1"
pandas = "^1.5.3"
openpyxl = "^3.1.2"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "codiceapp.main:start"